# voice-to-xero-mobile

./: .gitignore  App.tsx  app.json  package-lock.json  package.json
api/: .env.example  CLAUDE.md  pyproject.toml  pytest.ini
api/app/: __init__.py  main.py
api/app/api/: __init__.py  auth.py  models.py  routes.py  session.py
api/app/api/common/: __init__.py  response_negotiator.py  schemas.py  token_auth.py  utils.py
api/app/api/contact_workflow/: __init__.py  config.py  models.py  session_store.py  step_handlers.py  xero_service.py
api/app/api/contact_workflow/routes/: __init__.py  auth_utils.py  shared_utils.py  step_routes.py  submission_routes.py  template_renderers.py  workflow_routes.py
api/app/api/contact_workflow/validators/: __init__.py  session_validators.py
api/app/api/invoice_workflow/: __init__.py  config.py  models.py  session_store.py  step_handlers.py  xero_service.py
api/app/api/invoice_workflow/routes/: __init__.py  auth_utils.py  shared_utils.py  step_routes.py  submission_routes.py  template_renderers.py  workflow_routes.py
api/app/api/invoice_workflow/validators/: __init__.py  field_validators.py  invoice_validators.py  session_validators.py
api/app/api/workflow_base/: README.md  WORKFLOW_GUIDE.md  __init__.py  base_router.py  base_session.py  cache.py  config.py  exceptions.py  html_renderer.py  models.py  parsing_utils.py  step_processor.py
api/app/api/workflow_base/tests/: test_base_session.py
api/tests/: __init__.py  test_auth.py  test_routes.py  test_session.py
api/~/Claude-Code-Remote/src/data/: session-map.json
(+32 files in other folders)
